# battle_for_honor

./: README.md
BattleForHonour/: CMakeLists.txt  GameFacade.h  GameInfo.h  Specs.h  main.cpp
BattleForHonour/Armor/: Armor.h  ArmorFlyWeight.cpp  ArmorFlyWeight.h  LeatherArmor.h  PlateMail.h  Robe.h  VladimirOffering.h
BattleForHonour/Exceptions/: StackExceptions.h
BattleForHonour/GameField/: FieldCell.cpp  FieldCell.h  GameField.cpp  GameField.h  GameFieldIterator.h
BattleForHonour/GameSettings/: BigGame.h  GameRule.h  MidGame.h  PlayerState.h  SmallGame.h
BattleForHonour/Landscapes/: Desert.h  Landscape.h  LandscapeProxy.cpp  LandscapeProxy.h  Swamp.h  Wasteland.h
BattleForHonour/Logs/: CmdLogger.h  FileLogger.h  LogFormat.h  LogProxy.h  Logend.h  Logger.h  NoLogger.h  TagFormat.h  TerminalLogger.h  TimeFormat.h  log.cpp  log.h
BattleForHonour/Objects/: Base.cpp  Base.h  GameObject.h  Unit.cpp  Unit.h
BattleForHonour/Objects/Neutrals/: ArcherStrategy.h  Archery.h  DruidStrategy.h  Hospital.h  InfantryStrategy.h  NeutralObject.h  NeutralObjectStrategy.h  Tent.h  Well.h
BattleForHonour/Objects/Units/Archer/: Archer.h  CrossBowMan.h  LongBowMan.h
BattleForHonour/Objects/Units/Druid/: Druid.h  Hermit.h  Priestess.h
BattleForHonour/Objects/Units/Infantry/: Infantry.h  SpearMan.h  SwordMan.h
BattleForHonour/Observers/: Observers.h
BattleForHonour/Terrains/: Terrain.h  TerrainProxy.h
BattleForHonour/User/: CommandInterpreter.h  ConnectCI.h
BattleForHonour/User/Commands/: AttackCommand.h  AttackUnitCommand.h  Command.h  CommandMemento.h  CommandSnapshot.h  CreateBaseCommand.h  CreateCommand.h  CreateUnitCommand.h  ExitCommand.h  LoadCommand.h  MoveCommand.h  MoveUnitCommand.h  NewCommand.h  NewGameCommand.h  SaveCommand.h  ShowBaseCommand.h  ShowCommand.h  ShowUnitCommand.h  SkipCommand.h
BattleForHonour/Weapon/: Bow.h  Weapon.h  WeaponFlyWeight.h
Battle_For_Honor/: CMakeLists.txt
Battle_For_Honor/Battle Field/: Cell.cpp  Cell.h  Field.cpp  Field.h  FieldIterator.cpp  FieldIterator.h
Battle_For_Honor/Factory/: ArcherFactory.h  FootmanFactory.h  HorseFactory.h  UnitFactory.h
Battle_For_Honor/Main Base/: Base.cpp  Base.h
Battle_For_Honor/Units/: Armour.cpp  Armour.h  Attributes.cpp  Attributes.h  Crossbows.cpp  Crossbows.h  Damage.cpp  Damage.h  HorseArcher.cpp  HorseArcher.h  LongBowman.cpp  LongBowman.h  SpearHorse.cpp  SpearHorse.h  Spearman.cpp  Spearman.h  Swordsman.cpp  Swordsman.h  Unit.cpp  Unit.h
