cmake_minimum_required(VERSION 3.15)
project(BattleForHonour)

set(CMAKE_CXX_STANDARD 20)

add_executable(BattleForHonour main.cpp GameField/GameField.cpp GameField/GameField.h
        Objects/Unit.cpp Objects/Unit.h
        Weapon/Weapon.h
        Armor/Armor.h Point.cpp
        Point.h
        GameField/GameFieldIterator.h
        Objects/Units/Infantry/Infantry.h
        Weapon/Sword.h
        Weapon/AbolishMagic.h
        Weapon/Bow.h
        Armor/Robe.h
        Armor/PlateMail.h
        Armor/LeatherArmor.h
        Armor/VladimirOffering.h
        Objects/Units/Druid/Druid.h
        Objects/Units/Archer/Archer.h
        Weapon/StarFall.h
        Objects/Units/Infantry/SwordMan.h
        Objects/Units/Archer/CrossBowMan.h
        Objects/Units/Archer/LongBowMan.h
        Objects/Units/Infantry/SpearMan.h
        Weapon/Spear.h
        Objects/Units/Druid/Priestess.h
        Objects/Units/Druid/Hermit.h
        GameField/FieldCell.cpp
        GameField/FieldCell.h
        Landscapes/Landscape.h
        Objects/Base.cpp
        Objects/Base.h
        Objects/Neutrals/NeutralObject.h
        Objects/GameObject.cpp
        Objects/GameObject.h
        Landscapes/Wasteland.h
        Landscapes/Swamp.h
        Landscapes/Desert.h
        Objects/Neutrals/Tent.h
        Objects/Neutrals/Hospital.h
        Objects/Neutrals/Well.h
        Landscapes/LandscapeProxy.cpp
        Landscapes/LandscapeProxy.h
        Objects/Neutrals/Archery.h
        Objects/Neutrals/NeutralObjectStrategy.h
        Objects/Neutrals/NeutralObjectStrategy.h
        Objects/Neutrals/ArcherStrategy.h
        Objects/Neutrals/InfantryStrategy.h
        Objects/Neutrals/DruidStrategy.h
        Armor/ArmorFlyWeight.h Weapon/WeaponFlyWeight.h
        Armor/ArmorFlyWeight.cpp
        Weapon/WeaponFlyWeight.cpp
        Observers/Observers.h
        User/Commands/Command.h
        User/Commands/CreateBaseCommand.h
        User/Commands/CreateUnitCommand.h
        User/Commands/MoveUnitCommand.h
        User/Commands/ShowBaseCommand.h
        User/Commands/ShowUnitCommand.h
        User/Commands/ShowCommand.h
        User/Commands/CreateCommand.h
        User/Commands/MoveCommand.h
        GameFacade.h
        GameInfo.h
        User/Commands/AttackCommand.h
        User/Commands/AttackUnitCommand.h
        Logs/LogProxy.h
        Logs/Logger.h
        Logs/FileLogger.h
        Logs/TerminalLogger.h
        Logs/NoLogger.h
        Logs/LogFormat.h
        Logs/TimeFormat.h
        Logs/TagFormat.h
        Logs/NoFormat.h
        Logs/log.cpp
        Logs/log.h
        User/Commands/ExitCommand.h
        Logs/Logend.h
        User/Commands/SaveCommand.h
        User/Commands/LoadCommand.h
        User/Commands/CommandMemento.h
        User/CommandInterpreter.h
        User/ConnectCI.h
        Specs.h
        GameSettings/SmallGame.h
        GameSettings/MidGame.h
        GameSettings/GameRule.h
        User/Commands/NewCommand.h
        User/Commands/NewGameCommand.h
        GameSettings/PlayerState.h
        GameSettings/BigGame.h
        Exceptions/StackExceptions.h
        )